--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,92 +1,191 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    border-radius: 10px;
-    
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  border-radius: 10px;
+}
 
 #contenedor {
-    border-style: solid;
-    padding-top: 30px;
-    background-color: rgb(3, 95, 253);
+  border-style: solid;
+  padding-top: 30px;
+  background: linear-gradient(to right, rgb(2, 158, 179), rgb(1, 29, 46));
+
 }
 
 /** ----------------------------------------------------------- header-----------------------------------------------------------**/
-li .nav-link{ 
-    color: #fbfcfb;
+h1 {
+  text-align: center;
+  align-items: center;
+  margin-top: 15%;
 }
-#Datos{
-    display: flex;
-    text-align: center;
+
+#FPerfil {
+  text-align: center;
+  align-items: center;
+  margin-top: 10px;
 }
-#Datos h1{
-    text-align: center;
-    align-items: center;
-    margin-top: 15%;    
-}
-@media (max-width:600px){
-    #Datos{
-        display: flex;
-        flex-direction: column;
-    }
+
+#Datos {
+  display: flex;
+  text-align: center;
 }
 
 div.card-header {
-    margin: 10px;
-    height: 80%;
-    align-items: center;
-    background-color: rgb(93, 142, 247);
-}
-div.card-header section {
-    background-color: rgb(83, 133, 252);
-    text-align: center;
+  margin: 10px;
+  height: 80%;
+  align-items: center;
+  background-color: rgb(0, 13, 14);
 }
 
 /** ----------------------------------------------------------- body -----------------------------------------------------------**/
 body {
-    /** background: linear-gradient(to right, rgb(239, 248, 252), rgb(236, 241, 241));**/
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  /** background: linear-gradient(to right, rgb(239, 248, 252), rgb(236, 241, 241));**/
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 #Info {
-    background-color: rgb(3, 95, 253);
-    font-size: 30px;
-    color: #fbfcfb;
-    display: flexbox;
+  background-color: rgb(2, 31, 51);
+  font-size: 30px;
+  color: #08ccfd;
+  display: flexbox;
 }
 
 section h3 {
-    text-align: center;
-    color: rgb(244, 247, 247);
-    background-color: rgb(29, 14, 240);
+  text-align: center;
+  color: #f0f8fa;
+  background: linear-gradient(to left, rgb(2, 158, 179), rgb(1, 29, 46));
+
 }
 
 section {
-    border-style: solid;
-    box-shadow: 8px 5px 7px rgb(164, 166, 247);
-    margin: 30px;
-    text-align: center;
+  border-style: solid;
+  box-shadow: 8px 5px 7px #029bc5;
+  margin: 30px;
+  text-align: center;
+  color: #08ccfd;
 }
 
+/** -------------------------------modales--------------------------**/
 
+.modal {
+  background: linear-gradient(to right, rgb(2, 158, 179), rgb(1, 29, 46));
+
+}
+.modal-body{
+  color:#f0f8fa
+}
+/** ---------------------------------------------------------**/
 /** ----------------------------------------------------------- seccion Contacto -----------------------------------------------------------**/
 #Contacto span {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 #Contacto i {
-    color: rgb(247, 250, 247);
-    font-size: 50px;
-    padding: 10 px;
-    margin: 20px;
+  color: #08ccfd;
+  font-size: 50px;
+  padding: 10 px;
+  margin: 20px;
 
 }
 
-/** ----------------------------------------------------------- Medias queries -----------------------------------------------------------
+
+#Proyectos .imagen img {
+  width: 100%;
+  height: 150px;
+  background-color: #08ccfd;
+  padding: 5px;
+  margin: 5px;
+  margin-right: 10px;
+}
+
+#VB {
+  background-color: #08ccfd;
+}
+
+.imagen {
+  width: 100%;
+}
+
+.imagen img {
+  width: 100%;
+  height: 300px;
+}
+
+.galeria {
+  width: 100%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 1rem;
+  row-gap: 1rem;
+}
+ /** ----------------------------------------------------------- Medias queries -----------------------------------------------------------**/
+@media (max-width:700px) {
+  #Datos {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #FPerfil {
+    width: 100%;
+  }
+}
+@media (min-width:100px) {
+  .galeria {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media (min-width:520px) {
+  .galeria {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width:728px) {
+  .galeria {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width:1024px) {
+  .galeria {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+/** ----------------------------- ---------  pruebas ----------------------------------------------------------------
+.habilidades {
+  max-width: 68.75rem;
+  margin: auto;
+  text-align: center;
+  margin-top: 2.5rem;
+  background-color: rgb(0, 13, 14);
+  color: #08ccfd;
+}
+
+.header-habilidades {
+  margin-bottom: 1rem;
+}
+
+.contenedor-habilidades img {
+  padding: 1.25rem;
+}
+
+.icon {
+  width: 21.875rem;
+  height: 32.25rem;
+}
+
+.icon-card {
+
+  border-radius: 11px;
+  box-shadow: 0 3px 10px var(--secondary-shadow);
+  padding: 10px;
+  margin: 5px;
+}
 @media (max-width: 900px) {
-    
-}
+    }
 #Info i {
     color: rgb(17, 180, 245);
     font-size: 50px;
@@ -94,4 +193,6 @@ section {
     margin: 20px;
 }
 
-**/
+#Proyectos{
+  background-color: #3af814;
+}**/
