--- a/css/estilos.css
+++ b/css/estilos.css
@@ -97,9 +97,13 @@ section {
   margin: 5px;
   margin-right: 10px;
 }
+#Proyectos  {
+  margin-right: 5px;
 
-#VB {
-  background-color: #08ccfd;
+}
+#VB {  
+  margin-right: 5px;
+  padding: 10px;
 }
 
 .imagen {
@@ -118,6 +122,7 @@ section {
   grid-template-columns: repeat(3, 1fr);
   column-gap: 1rem;
   row-gap: 1rem;
+  align-items: center;
 }
  /** ----------------------------------------------------------- Medias queries -----------------------------------------------------------**/
 @media (max-width:700px) {
